apps/backend-eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: backend
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 8080
